# very_hard_program

./: crypto2.py  fsdg.py  main.py  pyproject.toml  wd.py  р.py
