[tool.poetry]
name = "test"
version = "0.1.0"
description = "my test"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.3"
pygame = "^2.6.1"
request2 = "^0.2"
Flask = "^3.1.0"
fastapi = "^0.115.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
